fix(mongoUtil):TAP-4972-Solve-sonar-problem